Reworked voice chat to use the official API and cleaned up old map files.